课程管理优化代码